; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet6/extr_in6_ifattach.c_in6_ifattach_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet6/extr_in6_ifattach.c_in6_ifattach_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@V_in6_tmpaddrtimer_ch = common dso_local global i32 0, align 4
@V_ip6_temp_preferred_lifetime = common dso_local global i32 0, align 4
@V_ip6_desync_factor = common dso_local global i32 0, align 4
@V_ip6_temp_regen_advance = common dso_local global i32 0, align 4
@hz = common dso_local global i32 0, align 4
@in6_tmpaddrtimer = common dso_local global i32 0, align 4
@curvnet = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @in6_ifattach_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @in6_ifattach_init(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 @callout_init(i32* @V_in6_tmpaddrtimer_ch, i32 0)
  %4 = load i32, i32* @V_ip6_temp_preferred_lifetime, align 4
  %5 = load i32, i32* @V_ip6_desync_factor, align 4
  %6 = sub nsw i32 %4, %5
  %7 = load i32, i32* @V_ip6_temp_regen_advance, align 4
  %8 = sub nsw i32 %6, %7
  %9 = load i32, i32* @hz, align 4
  %10 = mul nsw i32 %8, %9
  %11 = load i32, i32* @in6_tmpaddrtimer, align 4
  %12 = load i32, i32* @curvnet, align 4
  %13 = call i32 @callout_reset(i32* @V_in6_tmpaddrtimer_ch, i32 %10, i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @callout_init(i32*, i32) #1

declare dso_local i32 @callout_reset(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
